--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "A tool using AI script"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "lmstudio>=1.2.0",
     "transformers>=4.50.0",
 ]
